<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">


    <Button
        android:id="@+id/btn_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/text_import"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layout_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="right"
        android:orientation="vertical"
        android:visibility="visible"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_2"
            android:padding="10dp"
            android:text="@string/add_course_form"
            android:textColor="@color/colorAshDark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_2"
            android:gravity="center"
            android:text="@string/import_txt"
            android:textColor="@color/colorAshDark"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_2"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded"
        tools:visibility="visible">

        <Spinner
            android:id="@+id/spin_dept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/department"
            android:minHeight="48dp"
            tools:ignore="InefficientWeight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spin_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/level"
                android:minHeight="48dp" />

            <Spinner
                android:id="@+id/spin_semester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/semester"
                android:minHeight="48dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_2"
        android:padding="10dp"
        android:text="@string/add_time_table"
        android:textColor="@color/colorAshDark"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_2"
        android:gravity="center"
        android:text="@string/import_txt"
        android:textColor="@color/colorAshDark"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_2"
        android:text="@string/create_time_table"
        android:textColor="@color/colorAshDark"
        android:textStyle="bold" />

</LinearLayout>

