<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aa000000">


    </RelativeLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn"
        android:minWidth="30dp"
        android:minHeight="30dp"
        android:padding="7dp"
        android:text="@string/text_import"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


    <LinearLayout
        android:id="@+id/b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_2"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/department"
            android:minHeight="48dp"
            tools:ignore="InefficientWeight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/level"
                android:minHeight="48dp" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/semester"
                android:minHeight="48dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_2"
        android:padding="10dp"
        android:text="@string/add_time_table"
        android:textColor="@color/colorAshDark"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_2"
        android:gravity="center"
        android:text="@string/import_txt"
        android:textColor="@color/colorAshDark"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,TextContrastCheck" />

    <Button
        android:id="@+id/e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_2"
        android:text="@string/create_time_table"
        android:textColor="@color/colorAshDark"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />
    <!--</LinearLayout>-->

</RelativeLayout>




