<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn"
        android:minWidth="30dp"
        android:minHeight="30dp"
        android:padding="7dp"
        android:text="@string/text_select"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <LinearLayout
        android:id="@+id/layout_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="right"
        android:orientation="vertical"
        android:visibility="visible"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_2"
            android:padding="10dp"
            android:text="@string/add_course_form"
            android:textColor="@color/colorAshDark"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_2"
            android:gravity="center"
            android:text="@string/import_txt"
            android:textColor="@color/colorAshDark"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/background_2"
        android:padding="10dp"
        android:text="@string/add_time_table"
        android:textColor="@color/colorAshDark"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_2"
        android:gravity="center"
        android:text="@string/import_txt"
        android:textColor="@color/colorAshDark"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded,TextContrastCheck" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_2"
        android:text="@string/create_time_table"
        android:textColor="@color/colorAshDark"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

</LinearLayout>

